; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_rebase.c_split_exec_commands.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_rebase.c_split_exec_commands.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.string_list*)* @split_exec_commands to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @split_exec_commands(i8* %0, %struct.string_list* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.string_list*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.string_list* %1, %struct.string_list** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %7
  %13 = load %struct.string_list*, %struct.string_list** %4, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @string_list_split(%struct.string_list* %13, i8* %14, i8 signext 10, i32 -1)
  %16 = load %struct.string_list*, %struct.string_list** %4, align 8
  %17 = call i32 @string_list_remove_empty_items(%struct.string_list* %16, i32 0)
  br label %18

18:                                               ; preds = %12, %7, %2
  ret void
}

declare dso_local i32 @string_list_split(%struct.string_list*, i8*, i8 signext, i32) #1

declare dso_local i32 @string_list_remove_empty_items(%struct.string_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
